--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <head> 
   <!-- import Athiti font from google fonts -->  
   <link href="https://fonts.googleapis.com/css?family=Athiti" rel="stylesheet">
+	
   <!-- importing font awesome icons --> 
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./style.css">
@@ -24,6 +25,7 @@
 				<li><a href="#awards" title="Awards">Awards</a></li>
 				<li><a href="#qualis" title="Qualifications">Qualifications </a></li>
 				<li><a href="#portfolio" title="Portfolio">Portfolio</a></li>
+				<li><a href="#more" title="more">More</a></li>
 				<li><a href="#contact" title="Contact Info">Contact Info</a></li>
 			</ul>
 		</div>
@@ -34,11 +36,13 @@
   <section class="pageOne text-center" id="home">
     <div id="overlay">
       <div class="title">
-        <h1 id="name"> Lela Chan </h1>
-        <h3 id="Form"><a href="http://www.cdsj5.edu.mo" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Official Website" target="_blank">CDSJ5</a><strong> Form 5 Student </strong></h3>
+        <h1 class="name"> Lela Chan </h1>
+        <h3 class="Form"><a href="http://www.cdsj5.edu.mo" style="font-family: 'Gochi Hand', san-serif; color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Official Website" target="_blank">CDSJ5</a><strong> Form 5 Student. </strong></h3>
+				<h3 class="Form">A girl who wants to study Mathematics in the future.</h3>
       </div>
     </div>
   </section>
+
 
 <!-- Awards --> 
   <section class="pageTwo" id="awards">
@@ -72,6 +76,9 @@
 	<li>
         <h3>DSEJ Lotus Award (2019-2020)</h3>
       </li>
+			<li>
+				<h3>Scholarship from Choi's Education and Cultural Fund, Macau</h3>
+			</li>
     </ul>
 
 		<h2 class="year">2019</h2>
@@ -80,6 +87,9 @@
         <h3>MathConceptition Individual Contest 2019 </h3>
         <p>(Bronze Award)</p>
       </li>
+			<li>
+				<h3>Scholarship from Choi's Education and Cultural Fund, Macau</h3>
+			</li>
     </ul>
   </div>
 </div>
@@ -96,6 +106,7 @@
 		<li>Microsoft Word (Microsoft 365 Apps and Office 2019)</li>
 		<li>Microsoft PowerPoint (Microsoft 365 Apps and Office 2019)</li>
 		<li>Microsoft Excel (Microsoft 365 Apps and Office 2019)</li>
+		<li>Microsoft Excel Expert (Microsoft 365 Apps and Office 2019)</li>
   </ul>
 	<ul class="quali2">
     <li >ABRSM - GRADE 6 PIANO</li>
@@ -108,13 +119,32 @@
     <a href="" class="po" title="Clicks for detail">My Portfolio</a>
   </section>
 
+<section class="pagex" id="more">
+ <h1 class="pageTitle" style="border-color: white; margin-bottom: 2%;">More...</h1>
+<div class="left">
+  <h2 class="ac">ECA</h2>
+    <p class="ac1">-> <a href="http://cdsj5robot.com/" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Robot Class Official Website" target="_blank">School Robot Class</a></p>
+	<p class="ac2" style="margin-top: 10%;">September 2019 - Present</p>
+</div>
+<div class="right">
+  <h2 class="ac">Hobbies</h2>
+    <p class="ac1">-> Listening to music</p>
+	<p class="ac2">Chinese and English Pop songs</p> 
+  <p class="ac1">-> Playing the piano</p>
+	<p class="ac1">-> Watching film</p>
+	<p class="ac2">My Favourite Movie Star: <a href="https://en.wikipedia.org/wiki/Jackson_Yee" style="color:grey; border-bottom-style: solid; border-bottom-width:2px" title="More about him" target="_blank">Jackson Yee</a></p> 
+</div>
+
 <!-- Contact Info -->  
   <section class="pageFive" id="contact">
-    <h1 class="pageTitle" style=" border-color: white; margin-bottom: 20px;"> Contact Info 📮</h1>
+    <h1 class="pageTitle" style=" border-color: white; margin-bottom: 20px; margin-top: 60%;"> Contact Info 📮</h1>
     <div class="bottomBtnList">
      <p class="email">Email: lelachan05@outlook.com</p>
       </div>
-<!-- partial -->
+
+
+
+
   
 </body>
 </html>
