--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div id="overlay">
       <div class="title">
         <h1 class="name"> Lela Chan </h1>
-        <h3 class="Form"><a href="http://www.cdsj5.edu.mo" style="font-family: 'Gochi Hand', san-serif; color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Official Website" target="_blank">CDSJ5</a><strong> Form 5 Student. </strong></h3>
-				<h3 class="Form">A girl who wants to study Mathematics in the future.</h3>
+        <h3 class="Form">A Form 5 Student who comes from <a href="http://www.cdsj5.edu.mo" style="font-family: 'Gochi Hand', san-serif; color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Official Website" target="_blank">CDSJ5</a><strong>, Macau SAR. </strong></h3>
+	<h3 class="Form">A girl who wants to study Mathematics in the future.</h3>
       </div>
     </div>
   </section>
