--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!-- Section 1 -->
   <section class="pageOne text-center" id="home">
     <div id="overlay">
-	<img src="IMG_1200.JPG" alt=""style="width: 100px; height: 100px;border-radius: 50%;">
+	<img src="IMG_1200.JPG" alt=""style="width: 100px; height: 100px;border-radius: 50%;text-align: center;padding-top: 10%;">
       <div class="title">
         <h1 class="name"> Lela Chan </h1>
         <h3 class="Form">A Form 5 Student who comes from <a href="http://www.cdsj5.edu.mo" style="font-family: 'Gochi Hand', san-serif; color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Official Website" target="_blank">CDSJ5</a><strong>, Macau SAR. </strong></h3>
