--- a/index.html
+++ b/index.html
@@ -97,20 +97,20 @@
   </section>
 
 <!-- Qualification -->
-  <section class="pageThree" id="qualis">
+ <section class="pageThree" id="qualis">
     <h1 class="pageTitle" style="border-color: white; margin-bottom: 20px;"> Qualifications 📄 </h1>
   <ul class="quali">
     <li >Microsoft Office Specialist</li>
 	</ul>
 	<ul class="quali1">
-		<li>Microsoft Word (Office 2016)</li>
-		<li>Microsoft Word (Microsoft 365 Apps and Office 2019)</li>
-		<li>Microsoft PowerPoint (Microsoft 365 Apps and Office 2019)</li>
-		<li>Microsoft Excel (Microsoft 365 Apps and Office 2019)</li>
-		<li>Microsoft Excel Expert (Microsoft 365 Apps and Office 2019)</li>
+		<li>Microsoft Word (Office 2016) <p class="s">  |Score: 1000</p></li>
+		<li>Microsoft Word (Microsoft 365 Apps and Office 2019) <p class="s">  |Score: 1000</p></li>
+		<li>Microsoft PowerPoint (Microsoft 365 Apps and Office 2019) <p class="s">  |Score: 1000</p></li>
+		<li>Microsoft Excel (Microsoft 365 Apps and Office 2019) <p class="s">  |Score: 1000</p></li>
+		<li>Microsoft Excel Expert (Microsoft 365 Apps and Office 2019) <p class="s">  |Score: 972</p></li>
   </ul>
 	<ul class="quali2">
-    <li >ABRSM - GRADE 6 PIANO</li>
+    <li >ABRSM - GRADE 6 PIANO <p class="s" style="color:white;">| Score: 123 --- Merit</li>
   </ul> 
 </section>
   
@@ -122,19 +122,20 @@
 
 <section class="pagex" id="more">
  <h1 class="pageTitle" style="border-color: white; margin-bottom: 2%;">More...</h1>
-<div class="left">
-  <h2 class="ac">ECA</h2>
-    <p class="ac1">-> <a href="http://cdsj5robot.com/" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Robot Class Official Website" target="_blank">School Robot Class</a></p>
-	<p class="ac2" style="margin-top: 10%;">September 2019 - Present</p>
-</div>
-<div class="right">
-  <h2 class="ac">Hobbies</h2>
-    <p class="ac1">-> Listening to music</p>
-	<p class="ac2">Chinese and English Pop songs</p> 
-  <p class="ac1">-> Playing the piano</p>
-	<p class="ac1">-> Watching film</p>
-	<p class="ac2">My Favourite Movie Star: <a href="https://en.wikipedia.org/wiki/Jackson_Yee" style="color:grey; border-bottom-style: solid; border-bottom-width:2px" title="More about him" target="_blank">Jackson Yee</a></p> 
-</div>
+	<div class="left">
+	  <h2 class="ac">ECA</h2>
+	    <p class="ac1">-> <a href="http://cdsj5robot.com/" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Robot Class Official Website" target="_blank">School Robot Class</a></p>
+		<p class="ac2" style="margin-top: 10%;">September 2019 - Present</p>
+	</div>
+	<div class="right">
+	  <h2 class="ac">Hobbies</h2>
+	    <p class="ac1">-> Listening to music</p>
+		<p class="ac2">Chinese and English Pop songs</p> 
+	  <p class="ac1">-> Playing the piano</p>
+		<p class="ac1">-> Watching film</p>
+		<p class="ac2">My Favourite Movie Star: <a href="https://en.wikipedia.org/wiki/Jackson_Yee" style="color:grey; border-bottom-style: solid; border-bottom-width:2px" title="More about him" target="_blank">Jackson Yee</a></p> 
+	</div>
+</section>
 
 <!-- Contact Info -->  
   <section class="pageFive" id="contact">
