--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
+<head> 
+  <!-- import Athiti font from google fonts -->  
+  <link href="https://fonts.googleapis.com/css?family=Athiti" rel="stylesheet">
+	
+  <!-- importing font awesome icons --> 
+  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./style.css">
+</head>
+
 <header>
 	<div id="header">
     <div class="nav">
@@ -25,6 +34,7 @@
 				<li><a href="#awards" title="Awards">Awards</a></li>
 				<li><a href="#qualis" title="Qualifications">Qualifications </a></li>
 				<li><a href="#portfolio" title="Portfolio">Portfolio</a></li>
+				<li><a href="#skill" title="Skills">Skills</a></li>
 				<li><a href="#more" title="more">More</a></li>
 				<li><a href="#contact" title="Contact Info">Contact Info</a></li>
 			</ul>
@@ -52,7 +62,7 @@
     <h2 class="year">2022</h2>
     <ul>
       <li>
-        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2022/0401/315.html" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2022 Macau Division Preliminary Competition</a></h3>
+        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2022/0401/315.html" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2022 Macau Division Preliminary Competition</a> [Python]</h3>
         <p>(Bronze Award)</p>
       </li>
       <li>
@@ -64,14 +74,14 @@
     <h2 class="year">2021</h2>
     <ul>
       <li>
-        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2021/0114/239.html" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2021 Macau Division Preliminary Competition</a> </h3>
+        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2021/0114/239.html" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2021 Macau Division Preliminary Competition</a> [Python]</h3>
         <p>(Silver Award)</p>
       </li>
     </ul>
 		<h2 class="year">2020</h2>
     <ul>
       <li>
-        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2020/0122/176.html" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2020 Hong Kong and Macau Division Preliminary Competition </a></h3>
+        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2020/0122/176.html" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2020 Hong Kong and Macau Division Preliminary Competition</a>     [C Programming]</h3>
         <p>(Bronze Award)</p>
       </li>
 	<li>
@@ -120,8 +130,27 @@
     <a href="" class="po" title="Clicks for detail">My Portfolio</a>
   </section>
 
+<!---skill-->
+<section class="pagexx" id="skill">
+ <h1 class="pageTitle" style="border-color: white; margin-bottom: 2%;">Skills</h1>
+	<div class="left">
+	  <h2 class="sk">Speaking Languages</h2>
+	    <p class="ac1">-> Mandarin</a></p>
+			<p class="ac1">-> Cantonese</a></p>
+			<p class="ac1">-> English</a></p>
+	</div>
+	<div class="right">
+	  <h2 class="sk">Programming Languages</h2>
+	    <p class="ac1">-> Python</p>
+	  <p class="ac1">-> C Programming</p>
+		<p class="ac1">-> HTML & CSS</p>
+		
+	</div>
+</section>
+
+<!---more-->
 <section class="pagex" id="more">
- <h1 class="pageTitle" style="border-color: white; margin-bottom: 2%;">More...</h1>
+ <h1 class="pageTitle" style="border-color: white; margin-bottom: 2%; margin-top: 55%;">More...</h1>
 	<div class="left">
 	  <h2 class="ac">ECA</h2>
 	    <p class="ac1">-> <a href="http://cdsj5robot.com/" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Robot Class Official Website" target="_blank">School Robot Class</a></p>
@@ -143,6 +172,9 @@
     <div class="bottomBtnList">
      <p class="email">Email: lelachan05@outlook.com</p>
       </div>
+
+
+
 
 
 
