--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
-<head> 
-  <!-- import Athiti font from google fonts -->  
-  <link href="https://fonts.googleapis.com/css?family=Athiti" rel="stylesheet">
-	
-  <!-- importing font awesome icons --> 
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./style.css">
-</head>
-
 <header>
 	<div id="header">
     <div class="nav">
@@ -113,11 +104,11 @@
     <li >Microsoft Office Specialist</li>
 	</ul>
 	<ul class="quali1">
-		<li>Microsoft Word (Office 2016) <p class="s">  |Score: 1000</p></li>
-		<li>Microsoft Word (Microsoft 365 Apps and Office 2019) <p class="s">  |Score: 1000</p></li>
-		<li>Microsoft PowerPoint (Microsoft 365 Apps and Office 2019) <p class="s">  |Score: 1000</p></li>
-		<li>Microsoft Excel (Microsoft 365 Apps and Office 2019) <p class="s">  |Score: 1000</p></li>
-		<li>Microsoft Excel Expert (Microsoft 365 Apps and Office 2019) <p class="s">  |Score: 972</p></li>
+		<li><a href="Office Word 2016.pdf" title="Clicks for checking the certificate" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Word (Office 2016)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="Word Associate.pdf" title="Clicks for checking the certificate" style="color: #233237;border-bottom-width:1.5px; border-bottom-style: solid;">Microsoft Word (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="PowerPoint Associate.pdf" title="Clicks for checking the certificate" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft PowerPoint (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="Excel Associate.pdf" title="Clicks for checking the certificate" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Excel (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="Excel Expert.pdf" title="Clicks for checking the certificate" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Excel Expert (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 972</p></li>
   </ul>
 	<ul class="quali2">
     <li >ABRSM - GRADE 6 PIANO <p class="s" style="color:white;">| Score: 123 --- Merit</li>
