--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
     <li >Microsoft Office Specialist</li>
 	</ul>
 	<ul class="quali1">
-		<li><a href="Office Word 2016.pdf" title="Clicks for checking the certificate" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Word (Office 2016)</a> <p class="s">  |Score: 1000</p></li>
-		<li><a href="Word Associate.pdf" title="Clicks for checking the certificate" style="color: #233237;border-bottom-width:1.5px; border-bottom-style: solid;">Microsoft Word (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
-		<li><a href="PowerPoint Associate.pdf" title="Clicks for checking the certificate" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft PowerPoint (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
-		<li><a href="Excel Associate.pdf" title="Clicks for checking the certificate" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Excel (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
-		<li><a href="Excel Expert.pdf" title="Clicks for checking the certificate" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Excel Expert (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 972</p></li>
+		<li><a href="Office Word 2016.pdf" title="Clicks for checking the certificate" target="_blank" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Word (Office 2016)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="Word Associate.pdf" title="Clicks for checking the certificate" target="_blank" style="color: #233237;border-bottom-width:1.5px; border-bottom-style: solid;">Microsoft Word (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="PowerPoint Associate.pdf" title="Clicks for checking the certificate" target="_blank" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft PowerPoint (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="Excel Associate.pdf" title="Clicks for checking the certificate" target="_blank" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Excel (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="Excel Expert.pdf" title="Clicks for checking the certificate" target="_blank" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Excel Expert (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 972</p></li>
   </ul>
 	<ul class="quali2">
     <li >ABRSM - GRADE 6 PIANO <p class="s" style="color:white;">| Score: 123 --- Merit</li>
