--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <!-- Portfolio -->   
   <section class="pageFour" id="portfolio">
     <h1 class="pageTitle" style="border-color: white; margin-bottom: 20px;"> Portfolio 📁</h1>
-    <a href="" class="po" title="Clicks for detail">My Portfolio</a>
+    <a href="https://lelachan.github.io/portfolio/" class="po" title="Clicks for detail">My Portfolio</a>
   </section>
 
 <!---skill-->
