--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <h2 class="year">2022</h2>
     <ul>
       <li>
-        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2022/0401/315.html" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2022 Macau Division Preliminary Competition</a> [Python]</h3>
+        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2022/0401/315.html" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2022 Macau Division Preliminary Competition</a> [Python]</h3>
         <p>(Bronze Award)</p>
       </li>
       <li>
-        <h3><a href="http://www.firsteducation.hk/a/19/120/2022/0106/306.html" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" target="_blank" title="More Infomation">World Mathematics Invitational 2022, Macao preliminary</a></h3>
+        <h3><a href="http://www.firsteducation.hk/a/19/120/2022/0106/306.html" target="_blank" title="More Infomation">World Mathematics Invitational 2022, Macao preliminary</a></h3>
         <p>(Bronze Award)</p>
       </li>
    </ul>
@@ -65,14 +65,14 @@
     <h2 class="year">2021</h2>
     <ul>
       <li>
-        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2021/0114/239.html" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2021 Macau Division Preliminary Competition</a> [Python]</h3>
+        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2021/0114/239.html" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2021 Macau Division Preliminary Competition</a> [Python]</h3>
         <p>(Silver Award)</p>
       </li>
     </ul>
 		<h2 class="year">2020</h2>
     <ul>
       <li>
-        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2020/0122/176.html" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2020 Hong Kong and Macau Division Preliminary Competition</a>     [C Programming]</h3>
+        <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2020/0122/176.html" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2020 Hong Kong and Macau Division Preliminary Competition</a>     [C Programming]</h3>
         <p>(Bronze Award)</p>
       </li>
 	<li>
@@ -104,11 +104,11 @@
     <li >Microsoft Office Specialist</li>
 	</ul>
 	<ul class="quali1">
-		<li><a href="Office Word 2016.pdf" title="Clicks for checking the certificate" target="_blank" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Word (Office 2016)</a> <p class="s">  |Score: 1000</p></li>
-		<li><a href="Word Associate.pdf" title="Clicks for checking the certificate" target="_blank" style="color: #233237;border-bottom-width:1.5px; border-bottom-style: solid;">Microsoft Word (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
-		<li><a href="PowerPoint Associate.pdf" title="Clicks for checking the certificate" target="_blank" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft PowerPoint (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
-		<li><a href="Excel Associate.pdf" title="Clicks for checking the certificate" target="_blank" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Excel (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
-		<li><a href="Excel Expert.pdf" title="Clicks for checking the certificate" target="_blank" style="color: #233237; border-bottom-width:1.5px;border-bottom-style: solid;">Microsoft Excel Expert (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 972</p></li>
+		<li><a href="Office Word 2016.pdf" title="Clicks for checking the certificate" target="_blank">Microsoft Word (Office 2016)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="Word Associate.pdf" title="Clicks for checking the certificate" target="_blank" >Microsoft Word (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="PowerPoint Associate.pdf" title="Clicks for checking the certificate" target="_blank" >Microsoft PowerPoint (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="Excel Associate.pdf" title="Clicks for checking the certificate" target="_blank" >Microsoft Excel (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 1000</p></li>
+		<li><a href="Excel Expert.pdf" title="Clicks for checking the certificate" target="_blank" >Microsoft Excel Expert (Microsoft 365 Apps and Office 2019)</a> <p class="s">  |Score: 972</p></li>
   </ul>
 	<ul class="quali2">
     <li >ABRSM - GRADE 6 PIANO <p class="s" style="color:white;">| Score: 123 --- Merit</li>
@@ -144,7 +144,7 @@
  <h1 class="pageTitle" style="border-color: white; margin-bottom: 2%; margin-top: 55%;">More...</h1>
 	<div class="left">
 	  <h2 class="ac">ECA</h2>
-	    <p class="ac1">-> <a href="http://cdsj5robot.com/" style="color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Robot Class Official Website" target="_blank">School Robot Class</a></p>
+	    <p class="ac1">-> <a href="http://cdsj5robot.com/" title="School Robot Class Official Website" target="_blank">School Robot Class</a></p>
 		<p class="ac2" style="margin-top: 10%;">September 2019 - Present</p>
 	</div>
 	<div class="right">
@@ -163,18 +163,6 @@
     <div class="bottomBtnList">
      <p class="email">Email: lelachan05@outlook.com</p>
       </div>
-
-
-
-
-
-
-
-
-
-
-
-
   
 </body>
 </html>
