--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
-
+	
 <header>
 	<div id="header">
     <div class="nav">
@@ -125,41 +125,56 @@
 <section class="pagexx" id="skill">
  <h1 class="pageTitle" style="border-color: white; margin-bottom: 2%;">Skills</h1>
 	<div class="left">
-	  <h2 class="sk">Speaking Languages</h2>
-	    <p class="ac1">-> Mandarin</a></p>
-			<p class="ac1">-> Cantonese</a></p>
-			<p class="ac1">-> English</a></p>
+	  <h2 class="sk1">Speaking Languages</h2>
+	    <p class="sk2">-> Mandarin</a></p>
+			<p class="sk4">LEVEL: Fluent</p>
+			<p class="sk2">-> Cantonese</a></p>
+			<p class="sk4">LEVEL: Fluent</p>
+			<p class="sk2">-> English</a></p>
+			<p class="sk4">LEVEL: Intermediate</p>
+	</div>
+	<div class="middle">
+	  <h2 class="sk1">Programming Languages</h2>
+	    <p class="sk2">-> Python</p>
+	  <p class="sk2">-> C Programming</p>
+		<p class="sk2">-> HTML & CSS</p>
+		
 	</div>
 	<div class="right">
-	  <h2 class="sk">Programming Languages</h2>
-	    <p class="ac1">-> Python</p>
-	  <p class="ac1">-> C Programming</p>
-		<p class="ac1">-> HTML & CSS</p>
-		
+	  <h2 class="sk1">Others</h2>
+	    <p class="sk2">-> Computer Software</p>
+			<p class="sk3">123D Design;<br>Adobe Photoshop, Premiere Pro, Illustrator;<br>Microsoft Word, PowerPoint, Excel </p> 
+			<p class="sk2">-> Arduino</a></p>
+			<p class="sk2">-> Musical Instruments</p>
+			<p class="sk3">Box drum;<br>Cucurbit flute ;<br>Piano; <br>Recorder</p>
 	</div>
 </section>
 
 <!---more-->
 <section class="pagex" id="more">
- <h1 class="pageTitle" style="border-color: white; margin-bottom: 2%; margin-top: 55%;">More...</h1>
-	<div class="left">
+ <h1 class="pageTitle" style="border-color: white; margin-bottom: 2%; margin-top: 63%;">More...</h1>
+	<div class="left1">
 	  <h2 class="ac">ECA</h2>
-	    <p class="ac1">-> <a href="http://cdsj5robot.com/" title="School Robot Class Official Website" target="_blank">School Robot Class</a></p>
-		<p class="ac2" style="margin-top: 10%;">September 2019 - Present</p>
+	    <p class="ac1"><i class="fas fa-robot"></i> <a href="http://cdsj5robot.com/" title="School Robot Class Official Website" target="_blank">School Robot Class</a></p>
+		<p class="ac3" style="margin-top: 10%;">September 2019 - Present</p>
+		<p class="ac1">🎹 Piano Class</p>
+		<p class="ac3" style="margin-top: 10%;">2011 - 2018</p>
 	</div>
-	<div class="right">
+	<div class="right1">
 	  <h2 class="ac">Hobbies</h2>
-	    <p class="ac1">-> Listening to music</p>
+	    <p class="ac1"><i class="fas fa-music"></i> Listening to music</p>
 		<p class="ac2">Chinese and English Pop songs</p> 
-	  <p class="ac1">-> Playing the piano</p>
-		<p class="ac1">-> Watching film</p>
-		<p class="ac2">My Favourite Movie Star: <a href="https://en.wikipedia.org/wiki/Jackson_Yee" style="color:grey; border-bottom-style: solid; border-bottom-width:2px" title="More about him" target="_blank">Jackson Yee</a></p> 
+		<p class="ac1"><i class="fas fa-microphone"></i> Singing</p>
+		<p class="ac1"><i class="fas fa-table-tennis"></i> Watching Table tennis Matches</p>
+		<p class="ac2"><i class="fas fa-heart"></i> Table tennis players: <br>Wang Chuqin & Sun Yingsha</p> 
+		<p class="ac1"><i class="fas fa-film"></i> Watching film</p>
+		<p class="ac2"><i class="fas fa-heart"></i> Movie Star: <a href="https://en.wikipedia.org/wiki/Jackson_Yee" style="color:grey; border-bottom-style: solid; border-bottom-width:2px" title="More about him" target="_blank">Jackson Yee</a></p> 
 	</div>
 </section>
 
 <!-- Contact Info -->  
   <section class="pageFive" id="contact">
-    <h1 class="pageTitle" style=" border-color: white; margin-bottom: 20px; margin-top: 60%;"> Contact Info 📮</h1>
+    <h1 class="pageTitle" style=" border-color: white; margin-bottom: 20px; margin-top: 120%;"> Contact Info 📮</h1>
     <div class="bottomBtnList">
      <p class="email">Email: lelachan05@outlook.com</p>
       </div>
