--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
 	<div class="right">
 	  <h2 class="sk1">Others</h2>
 	    <p class="sk2">-> Computer Software</p>
-			<p class="sk3">123D Design;<br>Adobe Photoshop, Premiere Pro, Illustrator;<br>Microsoft Word, PowerPoint, Excel </p> 
+			<p class="sk3">123D Design;<br>AutoCAD;<br>Adobe Photoshop, Premiere Pro, Illustrator;<br>Microsoft Word, PowerPoint, Excel </p> 
 			<p class="sk2">-> Arduino</a></p>
 			<p class="sk2">-> Musical Instruments</p>
-			<p class="sk3">Box drum;<br>Cucurbit flute ;<br>Piano; <br>Recorder</p>
+			<p class="sk3">Box drum;<br>Cucurbit flute;<br>Piano; <br>Recorder</p>
 	</div>
 </section>
 
@@ -165,7 +165,7 @@
 	  <h2 class="ac">Hobbies</h2>
 	    <p class="ac1"><i class="fas fa-music"></i> Listening to music</p>
 		<p class="ac2">Chinese and English Pop songs</p> 
-		<p class="ac1"><i class="fas fa-microphone"></i> Singing</p>
+		<p class="ac1"><i class="fas fa-train"></i> Travel</p>
 		<p class="ac1"><i class="fas fa-table-tennis"></i> Watching Table tennis Matches</p>
 		<p class="ac2"><i class="fas fa-heart"></i> Table tennis players: <br>Wang Chuqin & Sun Yingsha</p> 
 		<p class="ac1"><i class="fas fa-film"></i> Watching film</p>
@@ -174,9 +174,24 @@
 	</div>
 </section>
 
+	<h1 style="font-size: 50px; width: 100%; text-align: center; padding-top: 75%;">Photos about my life</h1>
+
+<div id="slider" style="margin-top: 5%;">
+  <a  class="control_next">></a>
+  <a class="control_prev"><</a>
+  <ul>
+		<li><img src="P90718-084611.JPG" style="width: 500px; height: 300px; margin-top: -21%; margin-left: 7%;">~The Travel in Chongqing, 2019~
+    </li>
+    <li><img src="IMG_1335.HEIC" style="width: 500px; height: 300px; margin-top: -21%; margin-left: 7%;">~My Jigsaw Puzzle which was brought from Nanjing~</li>
+    <li><img src="IMG_1343.JPG" style="width: 500px; height: 300px; margin-top: -21%; margin-left: 7%;">~Visiting Fudan University in 2018~</li>
+    <li><img src="IMG_1344.jpg" style="width: 500px; height: 300px; margin-top: -21%; margin-left: 7%;">~My Piano Performance in 2017~</li>
+  </ul>  
+		
+</div>
+
 <!-- Contact Info -->  
   <section class="pageFive" id="contact">
-    <h1 class="pageTitle" style=" border-color: white; margin-bottom: 20px; margin-top: 80%;"> Contact Info 📮</h1>
+    <h1 class="pageTitle" style=" border-color: white; margin-bottom: 20px; margin-top: 20%;"> Contact Info 📮</h1>
     <div class="bottomBtnList">
      <p class="email">Email: lelachan05@outlook.com</p>
       </div>
