--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 	</div>
 </section>
 
-	<h1 style="font-size: 50px; width: 100%; text-align: center; padding-top: 75%;">Photos about my life</h1>
+<!-- 	<h1 style="font-size: 50px; width: 100%; text-align: center; padding-top: 75%;">Photos about my life</h1>
 
 <div id="slider" style="margin-top: 5%;">
   <a  class="control_next">></a>
@@ -187,7 +187,7 @@
     <li><img src="IMG_1344.jpg" style="width: 500px; height: 300px; margin-top: -21%; margin-left: 7%;">~My Piano Performance in 2017~</li>
   </ul>  
 		
-</div>
+</div> -->
 
 <!-- Contact Info -->  
   <section class="pageFive" id="contact">
