--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		<p class="ac2"><i class="fas fa-heart"></i> Table tennis players: <br>Wang Chuqin & Sun Yingsha</p> 
 		<p class="ac1"><i class="fas fa-film"></i> Watching film</p>
 		<p class="ac2"><i class="fas fa-heart"></i> Movie Star: <a href="https://en.wikipedia.org/wiki/Jackson_Yee" style="color:grey; border-bottom-style: solid; border-bottom-width:2px" title="More about him" target="_blank">Jackson Yee</a></p> 
-		<p class="ac1">🧩 Jigsaw puzzle</p>
+		<p class="ac1"> Jigsaw puzzle</p>
 	</div>
 </section>
 
