--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 	<img src="IMG_1200.JPG"  alt="">
       <div class="title">
         <h1 class="name"> Lela Chan </h1>
-        <h3 class="Form">A Form 5 Student who comes from <a href="http://www.cdsj5.edu.mo" style="font-family: 'Gochi Hand', san-serif; color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Official Website" target="_blank">CDSJ5</a><strong>, Macau SAR. </strong></h3>
-	<h3 class="Form">A girl who wants to study Mathematics in the future.</h3>
+        <h3 class="Form">A Form 6 Student who comes from <a href="http://www.cdsj5.edu.mo" style="font-family: 'Gochi Hand', san-serif; color:#233237; border-bottom-style: solid; border-bottom-width:2px" title="School Official Website" target="_blank">CDSJ5</a><strong>, Macau SAR. </strong></h3>
+	<h3 class="Form">A girl who wants to study Mathematics Education in the future.</h3>
       </div>
     </div>
   </section>
@@ -53,6 +53,10 @@
 <div class="timeline">
     <h2 class="year">2022</h2>
     <ul>
+      <li>
+        <h3><a href="mos.pdf" target="_blank" title="More Infomation">The 14th Office Skills Competition for Macao Students</a> [Microsoft Office Word]</h3>
+        <p>(Second Runner-up)</p>
+      </li>
       <li>
         <h3><a href="http://www.firsteducation.hk/a/19/STEM__shi/2022/0401/315.html" target="_blank" title="More Infomation">Global Mathematics Coding Competition 2022 Macau Division Preliminary Competition</a> [Python]</h3>
         <p>(Bronze Award)</p>
